비로그인시 적용 버튼 미작동 수정

--- a/src/main/resources/templates/searchBookPage/searchBook.html
+++ b/src/main/resources/templates/searchBookPage/searchBook.html
@@ -116,7 +116,7 @@
       <div class="checkbox-preferenceList">
         <div class="myPreferenceBringingIn">
           <label>
-            <button id="myPreferenceBringingInBtn" th:if="${session.loginMember != null}"> 내 취향 불러오기</button>
+            <button id="myPreferenceBringingInBtn"> 내 취향 불러오기</button>
             <button id="preBtnAllCancel" hidden>전체 선택 취소</button>
           </label>
         </div>
