--- a/src/main/resources/templates/myPage/withdrawal.html
+++ b/src/main/resources/templates/myPage/withdrawal.html
@@ -61,10 +61,10 @@
       <h3>회원 탈퇴 확인</h3>
       <p>탈퇴를 진행하시려면 아래 정보를 입력해주세요.</p>
       
-      <div class="password-section">
+      <form class="password-section">
         <label for="password">비밀번호 확인</label>
         <input type="password" id="password" required placeholder="비밀번호를 입력해주세요." autocomplete="off">
-      </div>
+      </form>
 
       <div class="signature-section">
         <label>서명</label>
