--- a/src/main/resources/templates/admin/adminQuery.html
+++ b/src/main/resources/templates/admin/adminQuery.html
@@ -29,10 +29,9 @@
 
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
-        <button class="fa-solid fa-paper-plane" id="openPopup"></button>
+        <button class="fa-solid fa-paper-plane" id="chatting"></button>
       </div>
     </div>
-    <header th:replace="~{admin/adminChatting}"></header>
 
   </section>
 
