--- a/src/main/resources/templates/admin/adminFaq.html
+++ b/src/main/resources/templates/admin/adminFaq.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>관리자 문의 관리 페이지</title>
+  <title>관리자 문의 관리 페이지 | PhantomBooks</title>
 
   <script src="https://kit.fontawesome.com/913e662347.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/admin/adminFaq.css">
