--- a/src/main/resources/templates/admin/adminNotice.html
+++ b/src/main/resources/templates/admin/adminNotice.html
@@ -3,35 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>관리자 문의 관리 페이지</title>
+  <title>관리자 공지사항 관리 페이지 | PhantomBooks</title>
 
-  <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/admin/adminFaq.css">
+  <script src="https://kit.fontawesome.com/913e662347.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/admin/adminNotice.css">
 </head>
 <body>
   <section class="header">
     <div class="logo">
       <a href="/admin">
-          <img src="/images/고스트 코딩왕.png" alt="Logo">
+        <img src="/images/고스트 코딩왕.png" alt="Logo">
       </a>
     </div>
-  
-   
+
+
     <div class="function">
       <!-- 관리자 담당 업무 -->
       <div class="adminName">
-        <div th:if= "${session.loginMember}"
-             th:text="${session.loginMember.adminName}">
+        <div th:if="${session.loginMember}" th:text="${session.loginMember.adminName}">
           담당
         </div>
       </div>
-  
+
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
         <button class="fa-solid fa-paper-plane" id="openPopup"></button>
       </div>
     </div>
-    <header th:replace="~{admin/adminChatting}"></header>
+    <!-- <header th:replace="~{admin/adminChatting}"></header> -->
 
   </section>
 
@@ -44,12 +43,12 @@
           <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
           <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
           <li>
-            <a href="/admin/adminManager" 
-              th:if= "${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자 계정 관리</a>
+            <a href="/admin/adminManager" th:if="${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자 계정
+              관리</a>
           </li>
         </ul>
       </h3>
-    
+
       <h3 class="menu">
         <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;매출 및 일정 관리
         <ul class="submenu">
@@ -57,7 +56,7 @@
           <li><a href="/admin/schedule">&nbsp;&nbsp;&nbsp;-&nbsp;일정 관리</a></li>
         </ul>
       </h3>
-      
+
       <h3 class="menu">
         <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;도서 관리
         <ul class="submenu">
@@ -76,11 +75,15 @@
         </ul>
       </h3>
     </div>
-  
-  
-    <div class="content">
-      <h2>공지사항 관리</h2>
 
+
+  
+  
+  
+    <div class="content2">
+      <div class="title">
+        <h2>공지사항 관리</h2>
+      </div>
 
     
       <table class="notice-box">
