파일마다 타이틀 이름 통일시켜놓음

--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>장바구니 페이지</title>
+  <title>장바구니 페이지 | PhantomBooks</title>
   <link rel="stylesheet" href="/css/cart/cart.css">
 </head>
 
