--- a/src/main/resources/templates/customer/inquiryUpdate.html
+++ b/src/main/resources/templates/customer/inquiryUpdate.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title th:text="${query.queryTitle}">1:1 문의 수정</title>
+    <title th:text="${query.queryTitle}">1:1 문의 수정 페이지 | PhantomBooks</title>
     <link rel="stylesheet" href="/css/customer/inquiryUpdate.css">
 </head>
 
