--- a/src/main/resources/templates/customer/noticeDetail.html
+++ b/src/main/resources/templates/customer/noticeDetail.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>게시판 이름</title>
+  <title th:text="${notice.title}">공지사항 상세 페이지 | PhantomBooks</title>
   <link rel="stylesheet" href="/css/customer/noticeDetail.css">
   <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
 </head>
