--- a/src/main/resources/templates/customer/query.html
+++ b/src/main/resources/templates/customer/query.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1:1 문의</title>
+  <title>1:1 문의 글 작성 페이지 | PhantomBooks</title>
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/customer/query.css">
   <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
