--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>결제 페이지</title>
+  <title>결제 페이지 | PhantomBooks</title>
   <link rel="stylesheet" href="/css/order/order.css">
   <!-- 결제 -->
   <script src="https://cdn.portone.io/v2/browser-sdk.js"></script>
