--- a/src/main/resources/templates/customer/inquiryDetail.html
+++ b/src/main/resources/templates/customer/inquiryDetail.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title th:text="*{queryTitle}">1:1 문의 내역</title>
+  <title th:text="*{queryTitle}">1:1 문의 내역 페이지 | PhantomBooks</title>
   <link rel="stylesheet" href="/css/customer/inquiryDetail.css">
   <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
 </head>
