--- a/src/main/resources/templates/customer/support.html
+++ b/src/main/resources/templates/customer/support.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>고객지원</title>
+  <title>고객지원 | PhantomBooks</title>
   <link rel="stylesheet" href="/css/customer/support.css">
   <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
 </head>
