--- a/src/main/resources/templates/member/findId.html
+++ b/src/main/resources/templates/member/findId.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>비밀번호 확인</title>
+  <title>비밀번호 확인 | PhantomBooks</title>
   <link rel="stylesheet" href="/css/member/findId.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
