--- a/src/main/resources/templates/order/orderError.html
+++ b/src/main/resources/templates/order/orderError.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>에러 발생</title>
+    <title>에러 발생 | PhantomBooks</title>
 </head>
 <body>
     <h1>오류가 발생했습니다.</h1>
