--- a/src/main/resources/templates/searchBookPage/searchBook.html
+++ b/src/main/resources/templates/searchBookPage/searchBook.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>모든 책 조회 페이지</title>
+  <title>모든 책 조회 페이지 | PhantomBooks</title>
   <link rel="stylesheet" href="/css/searchBookPage/searchBook.css">
 </head>
 
