채팅방 sales제외 활성화

--- a/src/main/resources/templates/admin/adminManager.html
+++ b/src/main/resources/templates/admin/adminManager.html
@@ -30,8 +30,9 @@
 
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
-        <button class="fa-solid fa-paper-plane" id="openPopup"></button>
-        <header th:replace="~{admin/adminChatting}"></header>
+        <button class="fa-solid fa-paper-plane" id="chatting">
+          <a href="/admin/chatting"></a>
+        </button>
       </div>
     </div>
 
