--- a/src/main/resources/templates/admin/adminPage.html
+++ b/src/main/resources/templates/admin/adminPage.html
@@ -29,10 +29,11 @@
 
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
-        <button class="fa-solid fa-paper-plane" id="openPopup"></button>
+        <button class="fa-solid fa-paper-plane" id="chatting">
+          <a href="/admin/chatting"></a>
+        </button>
       </div>
     </div>
-    <header th:replace="~{admin/adminChatting}"></header>
 
   </section>
 
