--- a/src/main/resources/templates/admin/adminQuery.html
+++ b/src/main/resources/templates/admin/adminQuery.html
@@ -29,7 +29,9 @@
 
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
-        <button class="fa-solid fa-paper-plane" id="chatting"></button>
+        <button class="fa-solid fa-paper-plane" id="chatting">
+          <a href="/admin/chatting"></a>
+        </button>
       </div>
     </div>
 
