폰트어썸 수정

--- a/src/main/resources/templates/admin/adminChatting.html
+++ b/src/main/resources/templates/admin/adminChatting.html
@@ -17,6 +17,7 @@
     const notificationDefaultImage 
     = /*[[#{user.default.image}]]*/ '기본이미지';
 </script>
+<script src="https://kit.fontawesome.com/913e662347.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
 
 </head>
