--- a/src/main/resources/static/css/admin/adminSales.css
+++ b/src/main/resources/static/css/admin/adminSales.css
@@ -9,30 +9,98 @@
 /* 드롭다운 스타일 */
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
-*{
+* {
   background-color: #EFEFEF;
   font-family: 'Pretendard-Regular';
   box-sizing: border-box;
+  /* border: 1px solid black; */
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow: hidden; /* 스크롤 없애기 */
+  overflow: hidden;
+  /* 스크롤 없애기 */
 }
 
-.header{
-  width: auto;
-  height: 70px;
-  margin: 0;
-
+/* 전체 헤더 스타일 */
+.header {
   display: flex;
-  flex-direction: row;
-
-  align-items: flex-start;
   justify-content: flex-end;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #EFEFEF;
+  /* 부드러운 배경색 */
 }
+
+/* 로고 스타일 */
+.header .logo img {
+  width: 120px;
+  height: auto;
+}
+
+/* 기능 섹션 스타일 */
+.header .function {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 20px;
+  margin-top: 15px;
+
+}
+
+/* 관리자 담당 업무 스타일 */
+.header .adminName {
+  border: 2px solid #205375;
+  border-radius: 8px;
+  padding: 3px 3px;
+  background-color: #EFEFEF;
+  font-size: 17px;
+  color: #205375;
+  font-weight: bold;
+  text-align: center;
+  white-space: nowrap;
+  width: 100px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* 비행기 버튼 스타일 */
+.header .chatting button {
+  background-color: #205375;
+  color: #fff;
+  font-size: 23px;
+  padding: 10px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  margin-right: 30px;
+}
+
+.header .chatting button:hover {
+  transform: scale(1.1);
+}
+
+.header .chatting button:focus {
+  outline: 2px solid #a5d8ff;
+}
+
+/* 모바일 반응형 */
+@media screen and (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .header .function {
+    justify-content: center;
+  }
+}
+
 /* 로고 */
 .logo {
   position: absolute;
@@ -46,7 +114,7 @@ html, body {
   max-height: 80px;
 }
 
-.function{
+.function {
   display: flex;
   flex-direction: row;
 
@@ -54,24 +122,6 @@ html, body {
 
   width: 500px;
 }
-
-.adminName{
-  width: 50px;
-  height: 50px;
-  border-radius: 25px;
-}
-
-.content-box {
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
-  gap: 20px;
-  width: 100%; 
-  min-height: 100vh;
-  height: 100%;
-  overflow-x: hidden;
-}
-
 
 /* 사이드바 css입니당 */
 .sideBar {
@@ -92,6 +142,8 @@ html, body {
   font-weight: bold;
   color: #333;
   position: relative;
+  margin-top: 20px;
+  ;
 }
 
 .menu:hover {
@@ -129,20 +181,35 @@ html, body {
 
 
 
+
 /* 드롭다운 필터 css */
-.content {
-  flex-grow: 1; 
+.content2 {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   gap: 20px;
   padding: 20px;
-  background-color: #efefef;
+  background-color: #EFEFEF;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  min-width: 0; 
+  min-width: 0;
   max-width: 100%;
+  margin-top: 0px;
+  padding-top: 0px;
+  height: 100vh;
 }
 
+.content2>h2 {
+  display: flex;
+  flex-direction: row;
+  margin-top: 20px;
+  width: 86%;
+  padding: 10px;
+}
+
+.title>h2 {
+  min-width: 200px;
+}
 
 .title{
   display: flex;
@@ -303,6 +370,21 @@ html, body {
   margin-right: 100px;
 }
 
+.sales-table th:nth-child(1){
+  width: 17%;
+}
+
+.sales-table th:nth-child(2){
+  width: 33%;
+}
+
+.sales-table th:nth-child(3){
+  width: 17%;
+}
+
+.sales-table th:nth-child(4){
+  width: 33%;
+}
 
 .sales-table {
   width: 900px;
@@ -391,7 +473,7 @@ html, body {
   gap: 10px; 
 }
 
-.pagination a {
+.pagination > a {
   display: block;
   padding: 8px 12px;
   text-decoration: none;
@@ -482,8 +564,18 @@ html, body {
   font-size: 25px;
   font-weight: bold;
   display: flex;
+  gap: 155px;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100px;
+  margin-top: -30px;
+}
+
+.sales > div{
+  text-align: left;
+  width: 250px;
+  min-width: 250px;
 }
 
 .graph-box{
@@ -511,7 +603,7 @@ html, body {
 }
 
 .salesRank > table{
-  font-size: 25px;
+  font-size: 12px;
   font-weight: bold;
 }
 
@@ -519,6 +611,25 @@ html, body {
   width: 500px;
   height: 520px;
 }
+
+.sales-title {
+  font-size: 15px; 
+  font-weight: lighter;
+  color: gray;
+}
+
+.sales-count {
+  font-size: 38px;
+  font-weight: bold;
+  display: block;
+}
+
+#salesRank > tr > th:nth-child(1){
+  color: #333;
+  font-weight: bold;
+}
+
+
 
 
 
