--- a/src/main/resources/templates/admin/adminSales.html
+++ b/src/main/resources/templates/admin/adminSales.html
@@ -1,158 +1,161 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>관리자 메인페이지</title>
+  <title>관리자 매출 관리 페이지 | PhantomBooks</title>
 
   <link rel="stylesheet" href="/css/admin/adminSales.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@1.0.1"></script>
-  <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@1.0.1"></script>
+  <script src="https://kit.fontawesome.com/913e662347.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <section class="header">
     <div class="logo">
       <a href="/admin">
         <img src="/images/고스트 코딩왕.png" alt="Logo">
-    </a>
+      </a>
     </div>
-  
-   
+
+
     <div class="function">
       <!-- 관리자 담당 업무 -->
       <div class="adminName">
-        <div th:if= "${session.loginMember}"
-             th:text="${session.loginMember.adminName}">
+        <div th:if="${session.loginMember}" th:text="${session.loginMember.adminName}">
           담당
         </div>
       </div>
-  
+
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
         <button class="fa-solid fa-paper-plane" id="openPopup"></button>
       </div>
     </div>
-    <header th:replace="~{admin/adminChatting}"></header>
+    <!-- <header th:replace="~{admin/adminChatting}"></header> -->
 
   </section>
 
-<main>
-    <section class="content-box">
-      <div class="sideBar">
-        <h3 class="menu">
-          <i class="fa-solid fa-users"></i>&nbsp;&nbsp;사용자 관련 관리
-          <ul class="submenu">
-            <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
-            <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
-            <li>
-              <a href="/admin/adminManager" 
-                th:if= "${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자 계정 관리</a>
-            </li>
-          </ul>
-        </h3>
-      
-        <h3 class="menu">
-          <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;매출 및 일정 관리
-          <ul class="submenu">
-            <li><a href="/admin/sales">&nbsp;&nbsp;&nbsp;-&nbsp;매출 관리</a></li>
-            <li><a href="/admin/schedule">&nbsp;&nbsp;&nbsp;-&nbsp;일정 관리</a></li>
-          </ul>
-        </h3>
-        
-        <h3 class="menu">
-          <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;도서 관리
-          <ul class="submenu">
-            <li><a href="/admin/manager">&nbsp;&nbsp;&nbsp;-&nbsp;재고 관리</a></li>
-            <li><a href="/admin/request">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청</a></li>
-            <li><a href="/admin/newBook">&nbsp;&nbsp;&nbsp;-&nbsp;새 책 등록</a></li>
-          </ul>
-        </h3>
-        <h3 class="menu">
-          <i class="fa-solid fa-question"></i>&nbsp;&nbsp;고객 지원
-          <ul class="submenu">
-            <li><a href="/admin/query">&nbsp;&nbsp;&nbsp;-&nbsp;문의 관리</a></li>
-            <li><a href="/admin/review">&nbsp;&nbsp;&nbsp;-&nbsp;리뷰 관리</a></li>
-            <li><a href="/admin/faq">&nbsp;&nbsp;&nbsp;-&nbsp;FAQ 관리</a></li>
-            <li><a href="/admin/notice">&nbsp;&nbsp;&nbsp;-&nbsp;공지사항 관리</a></li>
-          </ul>
-        </h3>
-      </div>
-    
-      <div class="content">
-        <div class="title">
-          <div class="sort-dropdown">
-            <select id="sortSelect">
-              <option value="sales">전체 매출</option>
-              <option value="company">출판사</option>
-              <option value="bookTitle">책 제목</option>
-              <input type="text" class="text hidden">
-              <button id="searchBtn">검색</button>
-            </select>
+
+  <section class="content-box">
+    <div class="sideBar">
+      <h3 class="menu">
+        <i class="fa-solid fa-users"></i>&nbsp;&nbsp;사용자 관련 관리
+        <ul class="submenu">
+          <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
+          <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
+          <li>
+            <a href="/admin/adminManager" th:if="${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자 계정
+              관리</a>
+          </li>
+        </ul>
+      </h3>
+
+      <h3 class="menu">
+        <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;매출 및 일정 관리
+        <ul class="submenu">
+          <li><a href="/admin/sales">&nbsp;&nbsp;&nbsp;-&nbsp;매출 관리</a></li>
+          <li><a href="/admin/schedule">&nbsp;&nbsp;&nbsp;-&nbsp;일정 관리</a></li>
+        </ul>
+      </h3>
+
+      <h3 class="menu">
+        <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;도서 관리
+        <ul class="submenu">
+          <li><a href="/admin/manager">&nbsp;&nbsp;&nbsp;-&nbsp;재고 관리</a></li>
+          <li><a href="/admin/request">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청</a></li>
+          <li><a href="/admin/newBook">&nbsp;&nbsp;&nbsp;-&nbsp;새 책 등록</a></li>
+        </ul>
+      </h3>
+      <h3 class="menu">
+        <i class="fa-solid fa-question"></i>&nbsp;&nbsp;고객 지원
+        <ul class="submenu">
+          <li><a href="/admin/query">&nbsp;&nbsp;&nbsp;-&nbsp;문의 관리</a></li>
+          <li><a href="/admin/review">&nbsp;&nbsp;&nbsp;-&nbsp;리뷰 관리</a></li>
+          <li><a href="/admin/faq">&nbsp;&nbsp;&nbsp;-&nbsp;FAQ 관리</a></li>
+          <li><a href="/admin/notice">&nbsp;&nbsp;&nbsp;-&nbsp;공지사항 관리</a></li>
+        </ul>
+      </h3>
+    </div>
+
+    <div class="content">
+      <div class="title">
+        <div class="sort-dropdown">
+          <select id="sortSelect">
+            <option value="sales">전체 매출</option>
+            <option value="company">출판사</option>
+            <option value="bookTitle">책 제목</option>
+            <input type="text" class="text hidden">
+            <button id="searchBtn">검색</button>
+          </select>
 
 
-            <div class="btn-container">
-              <button class="weeks">1주일</button>
-              <button class="month">1개월</button>
-              <button class="sixMonth">6개월</button>
-              <button class="dateSelect">기간 설정</button>
-              <input type="date" class="date hidden">
-            </div>
-          </div>
-        </div>
-      
-        <div class="graph-box">
-      
-          <div class="sales"> 
-            <div>기간 내 판매금액 : 0원</div>
-            <div>기간 내 발주금액 : 0원</div>
-            <div>순수익 : 0원</div>
-          </div>
-      
-          <div class="content-box">
-            <div class="graph">
-              <div class="graph-section">
-                <canvas id="myChart" width="5px" height="3px"></canvas>
-              </div>
-            </div>
-      
-            <div class="salesRank">
-              <h2>판매 순위</h2>
-              <table class="sales-table" border="1" >
-                <thead>
-                  <tr>
-                    <th>책 번호</th>
-                    <th>책이름</th>
-                    <th>판매수량</th>
-                    <th>수익</th>
-                  </tr>
-                </thead>
-                <tbody id="salesRank">
-                  <tr>
-                    <th>1️⃣</th>
-                    <td>책이름</td>
-                    <td>판매수량</td>
-                    <td>수익</td>
-                  </tr>
-                </tbody>
-              </table>
-              <div class="pagination-area" >
-                <ul class="pagination">
-                
-                  
-                </ul>
-              </div>
-            </div>
+          <div class="btn-container">
+            <button class="weeks">1주일</button>
+            <button class="month">1개월</button>
+            <button class="sixMonth">6개월</button>
+            <button class="dateSelect">기간 설정</button>
+            <input type="date" class="date hidden">
           </div>
         </div>
       </div>
-    </section>
-</main>
+
+      <div class="graph-box">
+
+        <div class="sales">
+          <div>기간 내 판매금액 : 0원</div>
+          <div>기간 내 발주금액 : 0원</div>
+          <div>순수익 : 0원</div>
+        </div>
+
+        <div class="content-box">
+          <div class="graph">
+            <div class="graph-section">
+              <canvas id="myChart" width="5px" height="3px"></canvas>
+            </div>
+          </div>
+
+          <div class="salesRank">
+            <h2 style="font-size: 20px;
+    font-weight: 600;">판매 순위</h2>
+            <table class="sales-table" border="1">
+              <thead>
+                <tr>
+                  <th>책 번호</th>
+                  <th>책이름</th>
+                  <th>판매수량</th>
+                  <th>수익</th>
+                </tr>
+              </thead>
+              <tbody id="salesRank">
+                <tr>
+                  <th>1️⃣</th>
+                  <td>책이름</td>
+                  <td>판매수량</td>
+                  <td>수익</td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="pagination-area">
+              <ul class="pagination">
+
+
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  </main>
 
   <script src="/js/admin/adminSales.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
