--- a/src/main/resources/templates/myPage/index.html
+++ b/src/main/resources/templates/myPage/index.html
@@ -20,7 +20,7 @@
     <div class="mypage-main">
       <div class="mypage-header">
         <div class="title-area" style="margin-top: 30px;">
-          <h2 class="welcome-title">마이페이지</h2>
+          <h2 class="welcome-title">My Page</h2>
           <div class="user-info">
             <i class="fas fa-user" style="color: #205375;"></i>
             <div class="user-name">
